# bugzia-Destop-assistant

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
docs/: Bugzia快捷方式查询和修改功能开发文档.md  desktop-pet-agent.md  desktop-pet-state-machine-plan.md  双窗口长条与结果浮层优化方案.md  开发进度.md  桌面AI对话框工具制作方案.md
docs/agent-notify/: README.md  bugzia-receiver.md  claude-code-hooks.md  codex-hooks.md
docs/superpowers/plans/: 2026-06-19-desktop-lyrics.md  2026-06-20-desktop-pet.md  2026-06-21-history-drag-sort.md
docs/superpowers/specs/: 2026-06-19-desktop-lyrics-design.md  2026-06-20-desktop-pet-design.md  2026-06-21-history-drag-sort-design.md
public/: piano-samples-attribution.txt
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  note.json  pet.json  piano.json  result.json  settings.json  slashpalette.json  waveform.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_notify.rs  ai.rs  conversations.rs  daily.rs  file_search.rs  hotkey_center.rs  lib.rs  main.rs  notes.rs  recyclebin.rs  settings.rs  shortcut_hotkeys.rs  social_notify.rs  waveform.rs  weather.rs
src/components/: ChatView.css  ChatView.tsx  CommandCard.css  CommandCard.tsx  FileResultsView.css  FileResultsView.tsx  HistoryRail.css  HistoryRail.tsx  HotkeyCenterPanel.tsx  InputBar.tsx  NoteWindow.css  NoteWindow.tsx  PetWindow.css  PetWindow.tsx  PianoWindow.css  PianoWindow.tsx  ResultWindow.css  ResultWindow.tsx  SettingsPanel.css  SettingsPanel.tsx  SettingsWindow.tsx  SlashPaletteWindow.css  SlashPaletteWindow.tsx  WaveformWindow.css  WaveformWindow.tsx
src/features/ai/: chat.ts
src/features/appearance/: appearance.ts
src/features/conversations/: conversations.ts
src/features/daily/: daily.ts
src/features/hotkeys/: hotkeyCenter.ts  hotkeyTypes.ts  shortcutHotkeys.ts
src/features/note/: noteTypes.ts  noteWindow.ts  notesStore.ts
src/features/pet/: petWindow.ts
src/features/petAgent/: petActions.ts  petAgentNotify.ts  petCorpus.ts  petDialogue.ts  petInput.ts  petMemory.ts  petPersona.ts  petPreferences.ts  petStateMachine.ts
src/features/piano/: grandPiano.ts  pianoWindow.ts
src/features/result/: resultTypes.ts  resultWindow.ts
src/features/search/: command.ts
src/features/settings/: settingsStore.ts  settingsTypes.ts  settingsWindow.ts
src/features/slashPalette/: slashPaletteTypes.ts  slashPaletteWindow.ts
src/features/waveform/: waveformWindow.ts
src/styles/: theme.css
