[package]
name = "bugzia"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bugzia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# API Key secure storage in the OS credential store (Windows Credential Manager).
# keyring v3 does NOT enable any platform backend by default (falls back to an
# in-memory mock store, so secrets are lost on restart) -> enable windows-native.
keyring = { version = "3", features = ["windows-native"] }
# OpenAI-compatible HTTP + SSE streaming. rustls-tls avoids native-tls/Schannel on Windows.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "gzip", "brotli"] }
# StreamExt over the reqwest byte stream for line-by-line SSE parsing.
futures-util = "0.3"
# System-audio loopback capture (WASAPI) for the desktop waveform visualizer.
# We build an INPUT stream on the DEFAULT OUTPUT device; cpal's WASAPI backend
# opens a render endpoint in loopback mode, handing us whatever the speakers play.
cpal = "0.15"
# Send dragged files to the OS recycle bin ("the pet eats files"). Windows uses
# IFileOperation -> reversible, NOT a permanent delete.
trash = "5"
# Localhost HTTP receiver for the "agent notify" feature: Claude Code / Codex
# hooks POST turn-complete / approval-needed events so the pet can alert the
# user. tiny_http is synchronous + thread-per-connection, so it runs in a
# dedicated std::thread without pulling an async runtime into the app.
tiny_http = "0.12"
windows = { version = "0.56", features = [
  "ApplicationModel",
  "Foundation",
  "Foundation_Collections",
  "UI_Notifications",
  "UI_Notifications_Management",
  "Win32_System_WinRT",
] }
